--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "@fortawesome/fontawesome-free": "^6.2.1",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3"
-  }
+  },
+  "browserslist": ["> 0.5%, last 1 version, not dead"]
 }
