--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "gulp-autoprefixer": "^8.0.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-plumber": "^1.2.1",
+    "gulp-rigger": "^0.5.8",
     "gulp-sass": "^5.1.0",
+    "gulp-terser": "^2.1.0",
     "node-sass": "^8.0.0"
   }
 }
