--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@fortawesome/fontawesome-free": "^6.2.1",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
-    "owl-carousel": "^1.0.0"
+    "owl-carousel": "^1.0.0",
+    "swiper": "^8.4.5"
   },
   "browserslist": [
     "> 0.5%, last 1 version, not dead"
