--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.1",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
     "owl-carousel": "^1.0.0",
